[build-system]
requires = ["hatchling>=1,<2", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[project]
name = "isic-metadata"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
maintainers = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
keywords = [
  "isic",
  "isic-archive",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pydantic>=2.4",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ImageMarkup/isic-metadata"
"Bug Reports" = "https://github.com/ImageMarkup/isic-metadata/issues"

[dependency-groups]
dev = [
  "tox==4.49.1",
  "tox-uv==1.33.2",
]
lint = [
  "ruff==0.15.5",
]
type = [
  "mypy==1.19.1",
]
test = [
  "hypothesis==6.151.9",
  "pydantic-to-pyarrow==0.1.6",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
]

[tool.hatch.build]
only-include = [
  "isic_metadata",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "isic_metadata",
  "tests",
]
check_untyped_defs = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = [
  # Use the same pythonpath for MyPy as for Pytest
  "tests",
]

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow test utility modules to be imported without adding the root directory to the pythonpath,
# which would cause the local "isic_metadata" module to shadow the install.
pythonpath = ["tests"]
addopts = [
  # Use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  "--cov",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
]

[tool.coverage.paths]
source = [
  "isic_metadata/",
  ".tox/**/site-packages/isic_metadata/",
]
